@@ -545,13 +545,14 @@ main(int argc, char **argv)
 		exit_value = 2;
 #endif
 	/* No check directories */
-	} else if (matchpath(nocheck_dirs, g.l.path) || (!matchpath(nocheck_dirs, g.l.path) && !matchpath(zip_dirs, g.l.path) && !matchpath(sfv_dirs, g.l.path) && !matchpath(group_dirs, g.l.path))) {
-		d_log("zipscript-c: Directory matched with nocheck_dirs, or is not among sfv/zip/group/speedtest dirs\n");
+	} else if (matchpath(nocheck_dirs, g.l.path) || (!matchpath(nocheck_dirs, g.l.path) && !matchpath(zip_dirs, g.l.path) && !matchpath(sfv_dirs, g.l.path) && !matchpath(group_dirs, g.l.path)) || insampledir(g.l.path)) {
+		d_log("zipscript-c: Directory matched with nocheck_dirs/sample_list, or is not among sfv/zip/group/speedtest dirs\n");
 		d_log("zipscript-c:   - nocheck_dirs  : '%s'\n", nocheck_dirs);
 		d_log("zipscript-c:   - zip_dirs      : '%s'\n", zip_dirs);
 		d_log("zipscript-c:   - sfv_dirs      : '%s'\n", sfv_dirs);
 		d_log("zipscript-c:   - group_dirs    : '%s'\n", group_dirs);
 		d_log("zipscript-c:   - speedtest_dirs: '%s'\n", speedtest_dirs);
+		d_log("zipscript-c:   - sample_list   : '%s'\n", sample_list);
 		d_log("zipscript-c:   - current path  : '%s'\n", g.l.path);
 		no_check = TRUE;
 	}
